fix: adjust width and text overflow handling for selector options

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -625,7 +625,7 @@ div.ms-Tooltip-content p.ms-Tooltip-subtext a {
 }
 
 .selector-option {
-  @apply text-sm h-8 px-2 cursor-pointer bg-(--callout-background-color) text-(--text-primary-color) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary;
+  @apply w-60 text-ellipsis whitespace-nowrap text-sm h-8 px-2 cursor-pointer bg-(--callout-background-color) text-(--text-primary-color) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary;
 
   & option {
     @apply text-sm px-2 bg-(--callout-background-color) text-(--text-primary-color);
